app/globals.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  --swiper-navigation-size: 15px !important;
  --swiper-theme-color: #5e5c5c !important;
}

h1,
h2,
h3,
h4,
span,
p {
  margin: 0;
  padding: 0;
}
.logo {
  background-color: #b3e140;
  border-radius: 0px 0px 68px 0px;
  width: 167px;
  height: 184px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.logo h1 {
  font-size: 38px;
  text-transform: uppercase;
}
.links {
  height: 75px;
  display: flex;
  flex: 1;
  align-items: flex-end;
  justify-content: center;
}
ul {
  display: flex;
  transform: translate(9px, 3px);
  justify-content: space-between;
  align-items: flex-end;
  border: 2px;
  width: 406px;
  padding-bottom: 6px;
  border-bottom: 2px solid #e5e5e5;
}
li {
  list-style-type: none;
}
a {
  text-transform: uppercase;
  text-decoration: none;
  font-size: 14px;
  color: black;
  letter-spacing: 2px;
}
nav {
  display: flex;
}
.socail-links {
  display: flex;
  align-items: flex-end;
  height: 67px;
  padding-right: 3.5rem;
  gap: 1.5rem;
}
.main-div {
  width: 50%;
}
.main-image {
  transform: rotate(4deg);
  scale: 1.1;
}
.parent-div {
  display: flex;
  justify-content: space-around;
}
.main-heading h2 {
  font-size: 102px;
  line-height: 109px;
  text-transform: uppercase;
  transform: translate(-150px, -64px);
  letter-spacing: 1px;
}
.main-heading button {
  transform: translateY(53px);
  width: 412px;
  background-color: #75a304;
  outline: none;
  border: none;
  color: #000;
  font-size: 30px;
  float: right;
  padding: 34px;
  filter: drop-shadow(0px 34px 66px rgba(0, 0, 0, 0.15));
}
.hero-section {
  background-color: #b3e140;
  border-radius: 284px 0px 0px 0px;
  padding-right: 1.5rem;
}
.hero-heading h1 {
  font-size: 122px;
  font-weight: 400;
  line-height: 130px;
  color: rgba(61, 86, 0, 0.26);
  text-align: end;
  text-transform: uppercase;
}
.hero-heading h2 {
  font-size: 59px;
  line-height: 63px;
  color: #000;
  text-align: end;
  transform: translate(-5px, -39px);
  text-transform: uppercase;
}
.card {
  width: 407px;
  margin-bottom: 1rem;
  background: #c3eb5f;
  border-radius: 99.5972px 0px 0px 0px;
  padding: 1rem;
}
.single-card {
  border-radius: 99.5972px 0px 0px 0px;
  padding: 1rem;
  margin: 1rem;
}
.card-image {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
}

.card-div {
  padding-left: 1.5rem;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.card-name {
  font-style: normal;
  font-size: 2rem;
  color: #94bd2f;
  /* text-overflow:; */
  word-wrap: break-word;
}
.card-heading {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.carousel {
  background-color: #f4f4f4;
  /* margin: 2rem 0rem 2rem 2rem; */
  padding: 2rem;
}
.swiper {
  padding-bottom: 80px !important;
}
.swiper-button-prev,
.swiper-button-next {
  background-color: #ffff;
  border-radius: 50px;
  transform: translateY(-50px);
  padding: 10px;
  margin: 0px 30px;
  width: 35px !important;
  height: 35px !important;
}
.image-overlay {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  max-inline-size: 100%;
  display: block;
  transition: all 0.3s linear;
  overflow: hidden;
}
.image-overlay:hover {
  transform: scale(1.1);
  opacity: 1;
}
.swiper-horizontal > .swiper-scrollbar,
.swiper-scrollbar.swiper-scrollbar-horizontal {
  max-width: 650px !important;
  margin: 0 auto !important;
  left: 0;
  right: 0;
  transform: translateY(-50%);
  cursor: grab;
}
.banner-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url("https://betty-theme.myshopify.com/cdn/shop/files/20190906-DSC02947_1512x.jpg?v=1614754973");
  background-size: 100% 100%;
  max-inline-size: 100%;
  display: block;
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.banner-heading {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 40px;
  color: white;
  letter-spacing: 2px;

  transition: all 0.3s linear;
}
.banner-heading > h1 {
  font-size: 3rem;
}
.banner-heading > button {
  outline: none;
  border: none;
  padding: 1rem 1.5rem;
  font-size: 1rem;
  border-radius: 5px;
  letter-spacing: 2px;
}
.carousel > div > a {
  position: relative;
  text-decoration: none;
}

.carousel > div > a::after {
  content: "";
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 0;
  height: 2px;
  background-color: var(--swiper-theme-color);
  transition: width 0.3s ease-in-out;
}

.carousel > div > a:hover::after {
  width: 100%;
}

@media screen and (max-width: 1290px) {
  .main-heading h2 {
    font-size: 62px;
  }
  .main-div img {
    max-inline-size: 90%;
    block-size: auto;
  }
  .card-div {
    justify-content: center;
  }
  .parent-div {
    flex-direction: column;
    align-items: center;
    height: auto;
  }
  .main-div {
    width: 100%;
  }
  .main-heading {
    width: 100%;
    text-align: center;
  }
}
@media screen and (max-width: 990px) {
  .main-heading h2 {
    font-size: 52px;
    transform: translate(0px, 0px);
  }
  .main-div img {
    max-inline-size: 90%;
    block-size: auto;
  }
  .hero-heading h1 {
    font-size: 2rem;
    line-height: 97px;
  }
  .hero-heading h2 {
    font-size: 1rem;
    line-height: 30px;
  }
  ul {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .main-heading h2 {
    font-size: 32px;
    line-height: 37px;
  }
  .main-div img {
    max-inline-size: 90%;
    block-size: auto;
  }
  .main-heading button {
    transform: translateY(0px);
    width: 300px;
    margin: 2rem;
    float: left;
  }
  .card-name {
    font-size: 1.3rem;
  }
}

